--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ archivesBaseName = "modid"
 minecraft {
 	version = "1.7.10-10.13.4.1614-1.7.10"
 	runDir = ".minecraft"
-	mappings = 'stable_12'
+	mappings = "stable_12"
 }
 
 sourceCompatibility = 1.8
