it runs now, but not everything is activated.

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ archivesBaseName = "modid"
 minecraft {
 	version = "1.7.10-10.13.4.1614-1.7.10"
 	runDir = ".minecraft"
-	mappings = "stable_12"
+	//mappings = "stable_12"
 }
 
 sourceCompatibility = 1.8
@@ -82,7 +82,7 @@ repositories {
 	}
 	maven {
 		name = "Apple"
-		url ="http://www.ryanliptak.com/maven/"
+		url = "http://www.ryanliptak.com/maven/"
 	}
 	maven {
 		name = 'progwml6'
@@ -91,10 +91,6 @@ repositories {
 	maven { //chisel
 		name = "Tterrag"
 		url = "http://maven.tterrag.com/"
-	}
-	maven {
-		name = "OpenComputers Repo"
-		url = "http://maven.cil.li/"
 	}
 	maven {
 		name = "bdew"
@@ -140,7 +136,7 @@ dependencies {
 	compile "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:1.7.10-2.1.0.2308:deobf"
 	compile files("lib/BrandonsCore-1.0.0.12.jar")
 	compile "curse.maven:Carpenter's Blocks v3.3.8.2 - MC 1.7.10:2719376"
-	compile "chisel:Chisel:2.9.5.11:deobf"
+	compile "chisel:Chisel:2.9.5.11" //:deobf crashes game
 	compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
 	compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
 	compile "codechicken:ForgeMultipart:1.7.10-1.2.0.347:dev"
@@ -161,12 +157,12 @@ dependencies {
 	compile "curse.maven:extrautilities-1.2.12-deobf:2264384"
 	compile "farseek:Farseek:1.7.10:2.0.1"
 	compile "net.sengir.forestry:forestry_1.7.10:4.2.16.64:dev"
-	compile "com.amadornes.framez:Framez:1.7.10-0.2-33:deobf"
+	compile "curse.maven:Framez-1.7.10-0.2-32-hotfix-universal:2252712"
 	compile "se.gory_moon:GlobalGameRules:1.7.10-1.0"
 	compile files("lib/gregtech-5.09.32pre6.jar")
 	compile files("lib/GT-PlusPlus-1.7.04.483-dev.jar")
 	compile files("lib/GTTweaker-1.7.10-1.7.2.jar")
-	compile "hardcore-darkness:HardcoreDarkness:MC1.7.10:1.7"
+	//compile "hardcore-darkness:HardcoreDarkness:MC1.7.10:1.7" buggy mcp
 	compile "curse.maven:HelpFixer-1.0.7:2223813"
 	compile "nuclear-control-2:IC2NuclearControl:2.4.3a:dev"
 	compile "ichunutil:iChunUtil:4.2.3:deobf"
@@ -179,8 +175,8 @@ dependencies {
 	compile "mcp.mobius.jabba:Jabba:1.2.2_1.7.10:dev"
 	compile "journeymap:journeymap-1.7.10:5.1.4p2:unlimited"
 	compile "magic-bees:magicbees:1.7.10:2.4.4"
-	compile "curse.maven:malisiscore-1.7.10-0.14.3-dev:2283268"
-	compile "curse.maven:malisisdoors-1.7.10-1.13.2-dev:2284381"
+	//compile "curse.maven:malisiscore-1.7.10-0.14.3:2283267" //2283268 for dev
+	//compile "curse.maven:malisisdoors-1.7.10-1.13:2284380" //2284381 for dev
 	compile "mantle:Mantle:1.7.10:0.3.2b"
 	compile "minetweaker-recipemaker:MineTweakerRecipeMaker:1.7.10:1.1.1"
 	compile "curse.maven:MobAmputation-4.0.1:2239204"
@@ -188,6 +184,7 @@ dependencies {
 	compile "curse.maven:Modpack Configuration Checker-1.7.10-v1.5.3:2713414"
 	compile "curse.maven:MoreChisels-1.7.10-1.0.28-deobf:2263982"
 	compile "morpheus:Morpheus:1.7.10:1.6.21"
+	compile "qmunitylib:QmunityLib-1.7.10:0.1.114:universal"
 	compile "mouse-tweaks:MouseTweaks:2.4.4:mc1.7.10"
 	compile "natura:natura:1.7.10:2.2.1a2"
 	compile "natures-compass:NaturesCompass:1.7.10:1.3.1"
@@ -199,7 +196,7 @@ dependencies {
 	compile "curse.maven:NotEnoughKeys-1.7.10.3.0.0b45.dev-universal:2276280"
 	compile "curse.maven:NotEnoughResources-1.7.10-0.1.0-128:2323485"
 	compile "openblocks:OpenBlocks:1.7.10-1.6-1.7.10:deobf"
-	compile "li.cil.oc:OpenComputers:MC1.7.10-1.7.2.1204:dev"
+	//compile "opencomputers:OpenComputers-MC1.7.10:1.7.5.1290:universal"
 	compile "openmods:OpenModsLib:1.7.10-0.10:deobf"
 	compile "curse.maven:OpenModularTurrets-1.7.10-2.2.11-245:2549788"
 	compile "p455w0rds-library:p455w0rdslib:1.7.10:1.0.4"
@@ -208,7 +205,7 @@ dependencies {
 	compile "curse.maven:Pam's HarvestCraft 1.7.10Lb:2270206"
 	//compile "curse.maven:PerfectSpawn-1.1:2212916" buggy mcp
 	compile "practical-logistics:Practical-Logistics-1.7.10:0.2.4:dev"
-	compile "mrtjp:ProjectRed:1.7.10-4.7.0pre9.52:dev"
+	//compile "curse.maven:ProjectRed-1.7.10-4.7.0pre12.95-dev:2280729" wtf
 	compile "mods.railcraft:Railcraft_1.7.10:9.12.3.0:dev"
 	//compile "curse.maven:RandomThings-2.2.4:2225310" buggy mcp
 	compile "curse.maven:ReAuth-3.5.0:2433392"
@@ -219,18 +216,18 @@ dependencies {
 	compile "tinkers-construct:TConstruct:1.7.10:1.8.8.build991"
 	compile files("lib/TGregworks-1.7.10-1.0.18-deobf.jar")
 	compile "tic-tooltips:TiCTooltips:mc1.7.10:1.2.5"
-	compile "mcp.mobius.waila:Waila:1.5.10_1.7.10:dev"
+	//compile "mcp.mobius.waila:Waila:1.5.10_1.7.10:dev" where is the other one coming from?
 	compile "waila-features:WAILA-features:1.7.10:0.1.0"
 	compile "curse.maven:WarpDrive-1.7.10-1.4.2:2578306"
 	compile "curse.maven:Wawla-1.0.5.120:2298772"
 	compile "curse.maven:WirelessCraftingTerminal-1.7.10-rv3-1.8.7.9b-deobf:2460356"
 	compile "zombie-awareness:zombieawareness:1.7.10:1.10"
 	compile "ztones:Ztones:1.7.10:2.2.1"
-	//compile "curse.maven:[1.7.10]ArmorStatusHUD-client-1.28:2218859"
-	//compile "curse.maven:[1.7.10]MoVillages-1.4.2:2309559"
-	//compile "curse.maven:[1.7.10]StartingInventory-universal-1.7.10.r03:2218985"
-	//compile "curse.maven:[1.7.10]StatusEffectHUD-client-1.27:2218935"
-	compile "mrtjp:MrTJPCore:1.7.10-1.0.8.16:dev"
+	compile "curse.maven:[1.7.10]ArmorStatusHUD-client-1.28:2218859"
+	compile "curse.maven:[1.7.10]MoVillages-1.4.2:2309559"
+	compile "curse.maven:[1.7.10]StartingInventory-universal-1.7.10.r03:2218985"
+	compile "curse.maven:[1.7.10]StatusEffectHUD-client-1.27:2218935"
+	compile "mrtjpcore:MrTJPCore:1.1.0.33:dev"
 	compile "yuutolib:YuutoLib-1.7.10:1.0.3:dev"
 	compile "curse.maven:[1.7.10]bspkrsCore-universal-6.16:2227503"
 
